// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using ProjArqsi.Infrastructure;

#nullable disable

namespace ProjArqsi.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20251214004432_CreateStorageArea")]
    partial class CreateStorageArea
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "7.0.20")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("ProjArqsi.Domain.DockAggregate.Dock", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uniqueidentifier");

                    b.HasKey("Id");

                    b.ToTable("Docks", (string)null);
                });

            modelBuilder.Entity("ProjArqsi.Domain.StorageAreaAggregate.StorageArea", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<string>("ServedDocks")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)")
                        .HasColumnName("ServedDockIds");

                    b.HasKey("Id");

                    b.ToTable("StorageAreas", (string)null);
                });

            modelBuilder.Entity("ProjArqsi.Domain.UserAggregate.User", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uniqueidentifier");

                    b.Property<string>("ConfirmationToken")
                        .IsRequired()
                        .HasMaxLength(100)
                        .HasColumnType("nvarchar(100)");

                    b.Property<DateTime?>("ConfirmationTokenExpiry")
                        .HasColumnType("datetime2");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)")
                        .HasColumnName("Email");

                    b.Property<bool>("IsActive")
                        .HasColumnType("bit");

                    b.Property<RoleType>("Role")
                        .HasColumnType("int")
                        .HasColumnName("Role");

                    b.Property<string>("Username")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)")
                        .HasColumnName("Username");

                    b.HasKey("Id");

                    b.ToTable("Users");
                });

            modelBuilder.Entity("ProjArqsi.Domain.VesselAggregate.Vessel", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("nvarchar(450)");

                    b.Property<Guid>("VesselTypeId")
                        .HasColumnType("uniqueidentifier")
                        .HasColumnName("VesselTypeId");

                    b.HasKey("Id");

                    b.ToTable("Vessels", (string)null);
                });

            modelBuilder.Entity("ProjArqsi.Domain.VesselTypeAggregate.VesselType", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uniqueidentifier");

                    b.HasKey("Id");

                    b.ToTable("VesselTypes", (string)null);
                });

            modelBuilder.Entity("ProjArqsi.Domain.DockAggregate.Dock", b =>
                {
                    b.OwnsOne("ProjArqsi.Domain.DockAggregate.AllowedVesselTypes", "AllowedVesselTypes", b1 =>
                        {
                            b1.Property<Guid>("DockId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<string>("VesselTypeIds")
                                .IsRequired()
                                .HasColumnType("nvarchar(max)")
                                .HasColumnName("AllowedVesselTypeIds");

                            b1.HasKey("DockId");

                            b1.ToTable("Docks");

                            b1.WithOwner()
                                .HasForeignKey("DockId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.DockAggregate.Depth", "Depth", b1 =>
                        {
                            b1.Property<Guid>("DockId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<double>("Value")
                                .HasColumnType("float")
                                .HasColumnName("Depth");

                            b1.HasKey("DockId");

                            b1.ToTable("Docks");

                            b1.WithOwner()
                                .HasForeignKey("DockId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.DockAggregate.Location", "Location", b1 =>
                        {
                            b1.Property<Guid>("DockId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<string>("Description")
                                .IsRequired()
                                .HasMaxLength(500)
                                .HasColumnType("nvarchar(500)")
                                .HasColumnName("LocationDescription");

                            b1.HasKey("DockId");

                            b1.ToTable("Docks");

                            b1.WithOwner()
                                .HasForeignKey("DockId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.DockAggregate.DockLength", "Length", b1 =>
                        {
                            b1.Property<Guid>("DockId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<double>("Value")
                                .HasColumnType("float")
                                .HasColumnName("Length");

                            b1.HasKey("DockId");

                            b1.ToTable("Docks");

                            b1.WithOwner()
                                .HasForeignKey("DockId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.DockAggregate.DockName", "DockName", b1 =>
                        {
                            b1.Property<Guid>("DockId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<string>("Value")
                                .IsRequired()
                                .HasMaxLength(100)
                                .HasColumnType("nvarchar(100)")
                                .HasColumnName("DockName");

                            b1.HasKey("DockId");

                            b1.HasIndex("Value")
                                .IsUnique();

                            b1.ToTable("Docks");

                            b1.WithOwner()
                                .HasForeignKey("DockId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.DockAggregate.Draft", "MaxDraft", b1 =>
                        {
                            b1.Property<Guid>("DockId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<double>("Value")
                                .HasColumnType("float")
                                .HasColumnName("MaxDraft");

                            b1.HasKey("DockId");

                            b1.ToTable("Docks");

                            b1.WithOwner()
                                .HasForeignKey("DockId");
                        });

                    b.Navigation("AllowedVesselTypes")
                        .IsRequired();

                    b.Navigation("Depth")
                        .IsRequired();

                    b.Navigation("DockName")
                        .IsRequired();

                    b.Navigation("Length")
                        .IsRequired();

                    b.Navigation("Location")
                        .IsRequired();

                    b.Navigation("MaxDraft")
                        .IsRequired();
                });

            modelBuilder.Entity("ProjArqsi.Domain.StorageAreaAggregate.StorageArea", b =>
                {
                    b.OwnsOne("ProjArqsi.Domain.StorageAreaAggregate.AreaName", "Name", b1 =>
                        {
                            b1.Property<string>("StorageAreaId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<string>("Value")
                                .IsRequired()
                                .HasMaxLength(100)
                                .HasColumnType("nvarchar(100)")
                                .HasColumnName("AreaName");

                            b1.HasKey("StorageAreaId");

                            b1.HasIndex("Value")
                                .IsUnique();

                            b1.ToTable("StorageAreas");

                            b1.WithOwner()
                                .HasForeignKey("StorageAreaId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.StorageAreaAggregate.AreaType", "AreaType", b1 =>
                        {
                            b1.Property<string>("StorageAreaId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("AreaType");

                            b1.HasKey("StorageAreaId");

                            b1.ToTable("StorageAreas");

                            b1.WithOwner()
                                .HasForeignKey("StorageAreaId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.StorageAreaAggregate.CurrentOccupancy", "CurrentOccupancy", b1 =>
                        {
                            b1.Property<string>("StorageAreaId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("CurrentOccupancy");

                            b1.HasKey("StorageAreaId");

                            b1.ToTable("StorageAreas");

                            b1.WithOwner()
                                .HasForeignKey("StorageAreaId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.StorageAreaAggregate.MaxCapacity", "MaxCapacity", b1 =>
                        {
                            b1.Property<string>("StorageAreaId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("MaxCapacity");

                            b1.HasKey("StorageAreaId");

                            b1.ToTable("StorageAreas");

                            b1.WithOwner()
                                .HasForeignKey("StorageAreaId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.DockAggregate.Location", "Location", b1 =>
                        {
                            b1.Property<string>("StorageAreaId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<string>("Description")
                                .IsRequired()
                                .HasMaxLength(200)
                                .HasColumnType("nvarchar(200)")
                                .HasColumnName("Location");

                            b1.HasKey("StorageAreaId");

                            b1.ToTable("StorageAreas");

                            b1.WithOwner()
                                .HasForeignKey("StorageAreaId");
                        });

                    b.Navigation("AreaType")
                        .IsRequired();

                    b.Navigation("CurrentOccupancy")
                        .IsRequired();

                    b.Navigation("Location")
                        .IsRequired();

                    b.Navigation("MaxCapacity")
                        .IsRequired();

                    b.Navigation("Name")
                        .IsRequired();
                });

            modelBuilder.Entity("ProjArqsi.Domain.VesselAggregate.Vessel", b =>
                {
                    b.OwnsOne("ProjArqsi.Domain.VesselAggregate.Bays", "Bays", b1 =>
                        {
                            b1.Property<string>("VesselId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("Bays");

                            b1.HasKey("VesselId");

                            b1.ToTable("Vessels");

                            b1.WithOwner()
                                .HasForeignKey("VesselId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.VesselAggregate.Capacity", "Capacity", b1 =>
                        {
                            b1.Property<string>("VesselId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("Capacity");

                            b1.HasKey("VesselId");

                            b1.ToTable("Vessels");

                            b1.WithOwner()
                                .HasForeignKey("VesselId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.VesselAggregate.Length", "Length", b1 =>
                        {
                            b1.Property<string>("VesselId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<double>("Value")
                                .HasColumnType("float")
                                .HasColumnName("Length");

                            b1.HasKey("VesselId");

                            b1.ToTable("Vessels");

                            b1.WithOwner()
                                .HasForeignKey("VesselId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.VesselAggregate.Rows", "Rows", b1 =>
                        {
                            b1.Property<string>("VesselId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("Rows");

                            b1.HasKey("VesselId");

                            b1.ToTable("Vessels");

                            b1.WithOwner()
                                .HasForeignKey("VesselId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.VesselAggregate.Tiers", "Tiers", b1 =>
                        {
                            b1.Property<string>("VesselId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("Tiers");

                            b1.HasKey("VesselId");

                            b1.ToTable("Vessels");

                            b1.WithOwner()
                                .HasForeignKey("VesselId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.VesselAggregate.VesselName", "VesselName", b1 =>
                        {
                            b1.Property<string>("VesselId")
                                .HasColumnType("nvarchar(450)");

                            b1.Property<string>("Name")
                                .IsRequired()
                                .HasColumnType("nvarchar(max)")
                                .HasColumnName("VesselName");

                            b1.HasKey("VesselId");

                            b1.ToTable("Vessels");

                            b1.WithOwner()
                                .HasForeignKey("VesselId");
                        });

                    b.Navigation("Bays")
                        .IsRequired();

                    b.Navigation("Capacity")
                        .IsRequired();

                    b.Navigation("Length")
                        .IsRequired();

                    b.Navigation("Rows")
                        .IsRequired();

                    b.Navigation("Tiers")
                        .IsRequired();

                    b.Navigation("VesselName")
                        .IsRequired();
                });

            modelBuilder.Entity("ProjArqsi.Domain.VesselTypeAggregate.VesselType", b =>
                {
                    b.OwnsOne("ProjArqsi.Domain.VesselTypeAggregate.MaxBays", "MaxBays", b1 =>
                        {
                            b1.Property<Guid>("VesselTypeId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("MaxBays");

                            b1.HasKey("VesselTypeId");

                            b1.ToTable("VesselTypes");

                            b1.WithOwner()
                                .HasForeignKey("VesselTypeId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.VesselTypeAggregate.MaxRows", "MaxRows", b1 =>
                        {
                            b1.Property<Guid>("VesselTypeId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("MaxRows");

                            b1.HasKey("VesselTypeId");

                            b1.ToTable("VesselTypes");

                            b1.WithOwner()
                                .HasForeignKey("VesselTypeId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.VesselTypeAggregate.MaxTiers", "MaxTiers", b1 =>
                        {
                            b1.Property<Guid>("VesselTypeId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("MaxTiers");

                            b1.HasKey("VesselTypeId");

                            b1.ToTable("VesselTypes");

                            b1.WithOwner()
                                .HasForeignKey("VesselTypeId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.VesselTypeAggregate.TypeCapacity", "TypeCapacity", b1 =>
                        {
                            b1.Property<Guid>("VesselTypeId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<int>("Value")
                                .HasColumnType("int")
                                .HasColumnName("TypeCapacity");

                            b1.HasKey("VesselTypeId");

                            b1.ToTable("VesselTypes");

                            b1.WithOwner()
                                .HasForeignKey("VesselTypeId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.VesselTypeAggregate.TypeDescription", "TypeDescription", b1 =>
                        {
                            b1.Property<Guid>("VesselTypeId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<string>("Value")
                                .IsRequired()
                                .HasColumnType("nvarchar(max)")
                                .HasColumnName("TypeDescription");

                            b1.HasKey("VesselTypeId");

                            b1.ToTable("VesselTypes");

                            b1.WithOwner()
                                .HasForeignKey("VesselTypeId");
                        });

                    b.OwnsOne("ProjArqsi.Domain.VesselTypeAggregate.TypeName", "TypeName", b1 =>
                        {
                            b1.Property<Guid>("VesselTypeId")
                                .HasColumnType("uniqueidentifier");

                            b1.Property<string>("Value")
                                .IsRequired()
                                .HasColumnType("nvarchar(max)")
                                .HasColumnName("TypeName");

                            b1.HasKey("VesselTypeId");

                            b1.ToTable("VesselTypes");

                            b1.WithOwner()
                                .HasForeignKey("VesselTypeId");
                        });

                    b.Navigation("MaxBays")
                        .IsRequired();

                    b.Navigation("MaxRows")
                        .IsRequired();

                    b.Navigation("MaxTiers")
                        .IsRequired();

                    b.Navigation("TypeCapacity")
                        .IsRequired();

                    b.Navigation("TypeDescription")
                        .IsRequired();

                    b.Navigation("TypeName")
                        .IsRequired();
                });
#pragma warning restore 612, 618
        }
    }
}
